<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_25"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_676767"
        android:text="@string/exchange_rate"/>
    
    <RelativeLayout
        android:id="@+id/usdt_lin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/exchange_rate"
        android:layout_margin="@dimen/dp_25">

        <TextView
            android:id="@+id/usdt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="usdt"/>

        <EditText
            android:id="@+id/usdt_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:background="@null"
            android:textColor="@color/color_000000"
            android:hint="请输入数量"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_E5E5E5"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cny_lin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/usdt_lin"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25">

        <TextView
            android:id="@+id/cny_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="cny"/>

        <TextView
            android:id="@+id/cny_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:background="@null"
            android:textColor="@color/color_000000"
            android:hint="金额"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_E5E5E5"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cny_lin"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginLeft="@dimen/dp_25"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_676767"
        android:text="@string/current_balance"/>

    <Button
        android:id="@+id/bt_buy_now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/current_balance"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/but_buy_now_bg"
        android:textSize="@dimen/sp_17"
        android:textColor="@color/white"
        android:text="@string/but_now"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_buy_now"
        android:layout_marginLeft="@dimen/dp_15"
        android:padding="@dimen/dp_15"
        android:background="@color/color_ECECF3"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_656565"
        android:text="@string/buy_tip"
        android:lineSpacingExtra="5dp"/>

</RelativeLayout>