<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FAFBFD">

    <RelativeLayout
        android:id="@+id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/dp_10">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:scaleType="center"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/title_ty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/color_000000"
            android:text="详细记录"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_num_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_lay"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_5"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/order_num"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/order_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/type_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_num_lin"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_5"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/type"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rmb_amount_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type_lin"
        android:background="@color/white"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/rmb_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/rmb_amount"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/rmb_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/payment_type_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rmb_amount_lin"
        android:background="@color/white"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/payment_type"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/payment_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/status_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_type_lin"
        android:background="@color/white"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/status"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_lin"
        android:background="@color/white"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/time"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/traders_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_lin"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_5"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/traders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/traders"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/traders_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="若对此订单有异议，可联系"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_318AFD"
            android:text="在线客服"/>
    </LinearLayout>
</RelativeLayout>