<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/dp_10">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:scaleType="center"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/title_ty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/color_000000"
            android:text="详细记录"/>
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_below="@id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_FAFBFD"/>


    <TextView
        android:id="@+id/buy_in"
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_25"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        android:textColor="@color/color_000000"
        android:text="买入usdt"/>

    <View
        android:id="@+id/line_buy"
        android:layout_below="@id/buy_in"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E5E5E5"/>
    <RelativeLayout
        android:id="@+id/order_num_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_buy"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_25"
        android:paddingLeft="@dimen/dp_25">

        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_666666"
            android:text="@string/order_num"/>

        <TextView
            android:id="@+id/order_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/order_num"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/price_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_num_lin"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_25">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/price"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/price"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quantity_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_lin"
        android:layout_margin="@dimen/dp_25">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_666666"
            android:text="@string/quantity"/>

        <TextView
            android:id="@+id/quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/quantity"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="20200038377737623"/>
    </RelativeLayout>

    <View
        android:id="@+id/quantity_line"
        android:layout_below="@id/quantity_lin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E5E5E5"/>

    <RelativeLayout
        android:id="@+id/paid_amount_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_line"
        android:layout_margin="@dimen/dp_25">
        <LinearLayout
            android:id="@+id/paid_amount_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/paid_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                android:textColor="@color/color_666666"
                android:text="@string/paid_amount"/>

            <TextView
                android:id="@+id/paid_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/paid_amount"
                android:layout_marginLeft="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                android:textColor="@color/color_000000"
                android:text="20200038377737623"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/business_infor"
        android:layout_below="@id/paid_amount_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        android:textColor="@color/color_000000"
        android:text="@string/business_infor"/>

    <View
        android:id="@+id/business_infor_line"
        android:layout_below="@id/business_infor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E5E5E5"/>
    <RelativeLayout
        android:id="@+id/name_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/business_infor_line"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_666666"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/name"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:textColor="@color/color_000000"
            android:text="xxx"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttom_bt"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_buy_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="0.6"
            android:gravity="center"
            android:background="@drawable/bt_cancel_bg"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/color_666666"
            android:text="联系客服"/>

        <TextView
            android:id="@+id/bt_buy"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1.4"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center"
            android:background="@drawable/but_buy_now_bg"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/white"
            android:text="@string/button_message"/>
    </LinearLayout>
</RelativeLayout>